Changed a bug that caused both  visibility toggle state icons to be visible when loading the extension (if computer was slowed down)

--- a/src/styles/_structure.scss
+++ b/src/styles/_structure.scss
@@ -43,10 +43,10 @@ Menu
 	padding: 0 0.4rem;
 }
 
-// #visibility-on,
-// #visibility-off{
-// 	opacity: 0;
-
+#visibility-on,
+#visibility-off{
+	display: none;
+}
 // 	white-space: nowrap;
 
 //   height: 36px;
